# fredmonitor

./: .env  .gitignore  ACCEPTANCE_CHECKLIST.md  API_SETTINGS_REFERENCE.md  CRISIS_DETECTION_DATA_COVERAGE_REPORT.md  CRISIS_EARLY_WARNING_FRAMEWORK.md  CRISIS_MONITOR_README.md  CURSOR_WORKFLOW_GUIDE.md  EARLY_WARNING_README.md  FACTOR_CODE_REVIEW.md  FINAL_DATA_COVERAGE_REPORT.md  FIXES_APPLIED.md  FIX_INSTRUCTIONS.md  FRED_DATA_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  TEST_RESULTS.md  WORK_LOG.md  __init__.py  ai_narrator.py  analyze_scoring.py  analyze_system_disconnection.py  api.txt  backtest_tactical_ew.py  check_all_categories.py  check_backtest_results.py  check_catalog.py  check_category_10.py  check_crisis_detection_data_coverage.py  check_data.bat  check_data_completeness.py  check_data_quality.py  check_m1_data.py  check_main_program.py  check_money_banking.py  check_money_banking_complete.py  check_money_banking_new.py  check_new_indicators.py  check_real_m1_data.py  check_risk_dashboard_data.py  (+92 more)
config/: adp_employment_catalog.yaml  ameribor_benchmark_rates_catalog.yaml  annual_rates_catalog.yaml  app_config.yaml  automobile_loan_rates_catalog.yaml  bankers_acceptance_rate_catalog.yaml  banking_indexes_catalog.yaml  borrowings_catalog.yaml  catalog_fred.yaml  certificates_of_deposit_catalog.yaml  commercial_banking_catalog.yaml  commercial_paper_catalog.yaml  consumer_credit_catalog.yaml  corporate_bonds_catalog.yaml  credit_card_loan_rates_catalog.yaml  crisis_indicators.yaml  crisis_indicators_final.yaml  crisis_indicators_updated.yaml  (+70 more)
(+14369 files in other folders)
